content/docs/theory-analysis/istio-gateway-api-inference-extension/manifests/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-namespace
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-namespace
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.ssup2.com"
    allowedRoutes:
      namespaces:
        from: All
